--- a/netflix-clone/src/App.css
+++ b/netflix-clone/src/App.css
@@ -1,8 +1,6 @@
-*{
-  margin: 0;
-  padding: 0;
-}
 
-.App {
-  text-align: center;
-}
+
+/* .App {
+  background-color: #111;
+  color: white;
+} */
