--- a/netflix-clone/src/components/Banner/banner.css
+++ b/netflix-clone/src/components/Banner/banner.css
@@ -11,7 +11,7 @@
 	/* height: 190px; */
 }
 .banner__title {
-	font-size: 3rem;
+	font-size: 2.55rem;
 	font-weight: 800;
 	padding-bottom: 0.3rem;
 }
@@ -20,8 +20,9 @@
 	line-height: 1;
 	padding: 1rem 0;
 	font-size: 1rem;
-	max-width: 360px;
+	max-width: 460px;
 	height: 80px;
+    margin-top: 1.5rem;
 }
 .banner__button {
 	cursor: pointer;
@@ -30,9 +31,10 @@
 	border: none;
     font-size: 1.2rem;
 	font-weight: 700;
-	border-radius: 0.2vw;
-    padding: 1rem 3rem;
+	border-radius: 0.7vw;
+    padding: 0.5rem 2rem;
 	margin-right: 2rem;
+    margin-top: 1rem;
 	background-color: rgba(51, 51, 51, 0.5);
 }
 .play{
